[gd_scene load_steps=34 format=2]

[ext_resource path="res://NPC/Enemy/SS_blue slime_v2.1.png" type="Texture" id=1]
[ext_resource path="res://NPC/Enemy/SlimeShadow.png" type="Texture" id=2]
[ext_resource path="res://Overlaps/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Overlaps/HurtBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://NPC/Enemy/Slime_Blue.gd" type="Script" id=5]
[ext_resource path="res://Overlaps/PlayerDetection.tscn" type="PackedScene" id=6]
[ext_resource path="res://Overlaps/Hitbox.gd" type="Script" id=7]
[ext_resource path="res://Overlaps/SoftCollision.gd" type="Script" id=8]
[ext_resource path="res://Overlaps/SoftCollision.tscn" type="PackedScene" id=9]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=10]
[ext_resource path="res://VFX/DeathEffect.tscn" type="PackedScene" id=11]

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 38, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 38, 0, 38, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 38, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 38, 0, 38, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 76, 0, 38, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 114, 0, 38, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 152, 0, 38, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 190, 0, 38, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 228, 0, 38, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 266, 0, 38, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 304, 0, 38, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 342, 0, 38, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 380, 0, 38, 32 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 418, 0, 38, 32 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 1 )
region = Rect2( 456, 0, 38, 32 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 1 )
region = Rect2( 494, 0, 38, 32 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "Idle",
"speed": 3.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ) ],
"loop": true,
"name": "Chase",
"speed": 12.0
} ]

[sub_resource type="CapsuleShape2D" id=10]
radius = 4.31425
height = 19.8245

[sub_resource type="CapsuleShape2D" id=11]
radius = 12.7105
height = 7.80461

[sub_resource type="CapsuleShape2D" id=12]
radius = 7.93603
height = 8.14564

[sub_resource type="CircleShape2D" id=13]
radius = 128.653

[sub_resource type="CircleShape2D" id=14]
radius = 14.696

[node name="Slime_Blue" type="KinematicBody2D" groups=[
"Enemies",
]]
collision_layer = 16
script = ExtResource( 5 )
DeathEffect = ExtResource( 11 )

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 0, -13 )
texture = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -13 )
frames = SubResource( 9 )
animation = "Idle"
playing = true

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2 )
rotation = -1.5708
shape = SubResource( 10 )

[node name="CollisionOverlaps" type="Node2D" parent="."]

[node name="HurtBox" parent="CollisionOverlaps" instance=ExtResource( 4 )]
collision_layer = 8
collision_mask = 32

[node name="Collision" parent="CollisionOverlaps/HurtBox" index="0"]
position = Vector2( 0.852577, -8.86679 )
rotation = -1.5708
shape = SubResource( 11 )

[node name="Hitbox" parent="CollisionOverlaps" instance=ExtResource( 3 )]
collision_layer = 0
collision_mask = 4
script = ExtResource( 7 )

[node name="Collision" parent="CollisionOverlaps/Hitbox" index="0"]
position = Vector2( 0, -7 )
rotation = -1.5708
shape = SubResource( 12 )

[node name="PlayerDetection" parent="CollisionOverlaps" instance=ExtResource( 6 )]
collision_layer = 0
collision_mask = 2

[node name="Collision" parent="CollisionOverlaps/PlayerDetection" index="0"]
position = Vector2( 0, -8 )
shape = SubResource( 13 )

[node name="SoftCollision" parent="CollisionOverlaps" instance=ExtResource( 9 )]
collision_layer = 64
collision_mask = 64
script = ExtResource( 8 )

[node name="Collision" parent="CollisionOverlaps/SoftCollision" index="0"]
position = Vector2( 0, -8 )
shape = SubResource( 14 )

[node name="Stats" parent="." instance=ExtResource( 10 )]

[connection signal="area_entered" from="CollisionOverlaps/HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="CollisionOverlaps/HurtBox"]
[editable path="CollisionOverlaps/Hitbox"]
[editable path="CollisionOverlaps/PlayerDetection"]
[editable path="CollisionOverlaps/SoftCollision"]
